- KERANJANG : join table dengan produk supaya bisa set max stok - expose url root to browser (as rootUrl)

--- a/technoid/assets/css/custom.css
+++ b/technoid/assets/css/custom.css
@@ -17,6 +17,10 @@ Front End
  background-color: #c9cacb;
 }
 
+.custom-bg-1 {
+  background-color: #6c757d;
+ }
+
 .custom-break {
   white-space: break-spaces;
 }
